Fixed header on mobile

--- a/shared/js/cyph/components/account/account.component.scss
+++ b/shared/js/cyph/components/account/account.component.scss
@@ -97,6 +97,10 @@
 				}
 			}
 		}
+
+		&.mobile {
+			margin-top: 75px;
+		}
 	}
 
 	.cyph-gradient {
@@ -318,6 +322,11 @@ button.home {
 		font-size: 2.5em;
 
 		@include transform(translateY(-3px));
+	}
+
+	&.mobile {
+		position: fixed;
+		width: 100%;
 	}
 }
 
