--- a/shared/js/cyph/components/search-bar/search-bar.component.scss
+++ b/shared/js/cyph/components/search-bar/search-bar.component.scss
@@ -1,5 +1,5 @@
 @import '../../../../css/mixins';
 
-.search-bar {
+.search-bar:not(.mobile) {
 	padding-top: 1em;
 }
